[project]
name = "react-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-core>=0.3.66",
    "langchain-huggingface>=0.3.0",
    "openai>=1.91.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "py2neo>=2021.2.4",
    "sentence-transformers>=4.1.0",
    "tabulate>=0.9.0",
]
